# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,9 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import organizationsRouter from "./organizations";
 import agentsRouter from "./agents";
 import tasksRouter from "./tasks";
-import organizationsRouter from "./organizations";
+import executionsRouter from "./executions";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(organizationsRouter);
 router.use(agentsRouter);
 router.use(tasksRouter);
+router.use(executionsRouter);
 
 export default router;
